; ModuleID = '/home/carl/AnghaBench/systemd/src/busctl/extr_busctl.c_json_dump_with_flags.c'
source_filename = "/home/carl/AnghaBench/systemd/src/busctl/extr_busctl.c_json_dump_with_flags.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@arg_json = common dso_local global i64 0, align 8
@JSON_PRETTY = common dso_local global i64 0, align 8
@JSON_FORMAT_PRETTY = common dso_local global i32 0, align 4
@JSON_FORMAT_NEWLINE = common dso_local global i32 0, align 4
@JSON_FORMAT_COLOR_AUTO = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32*)* @json_dump_with_flags to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @json_dump_with_flags(i32* %0, i32* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  store i32* %1, i32** %4, align 8
  %5 = load i32*, i32** %3, align 8
  %6 = load i64, i64* @arg_json, align 8
  %7 = load i64, i64* @JSON_PRETTY, align 8
  %8 = icmp eq i64 %6, %7
  br i1 %8, label %9, label %11

9:                                                ; preds = %2
  %10 = load i32, i32* @JSON_FORMAT_PRETTY, align 4
  br label %13

11:                                               ; preds = %2
  %12 = load i32, i32* @JSON_FORMAT_NEWLINE, align 4
  br label %13

13:                                               ; preds = %11, %9
  %14 = phi i32 [ %10, %9 ], [ %12, %11 ]
  %15 = load i32, i32* @JSON_FORMAT_COLOR_AUTO, align 4
  %16 = or i32 %14, %15
  %17 = load i32*, i32** %4, align 8
  %18 = call i32 @json_variant_dump(i32* %5, i32 %16, i32* %17, i32* null)
  ret void
}

declare dso_local i32 @json_variant_dump(i32*, i32, i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
